--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
     <div class="row">
         <h3>I'm in the AppComponent</h3>
         <hr>
-        <app-servers></app-servers>
+        <!--<app-servers></app-servers>-->
+        <div app-servers></div>
     </div>
 </div>
