--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
         <h3>I'm in the AppComponent</h3>
         <hr>
         <!--<app-servers></app-servers>-->
-        <div class="app-servers"></div>
+        <app-servers></app-servers>
     </div>
 </div>
