Modified to demo String Interpolation

--- a/src/app/server/server.component.html
+++ b/src/app/server/server.component.html
@@ -1,2 +1,2 @@
-<h4>The server component</h4>
-<br>
+<p> {{'Server'}} with ID  {{ serverId }}  is {{ getServerStatus() }} </p>
+<!-- example of string interpolation -->
