--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -2,8 +2,8 @@
 <input 
     type="text"
     class="form-control"
-    (input)="onUpdateServerName($event)">
-    <p>{{ serverName }}</p>
+    [(ngModel)]="serverName">
+    
 <button 
 class="btn btn-primary" 
 [disabled]="!allowNewServer" 
