--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,13 +1,8 @@
 <label>Server Name</label>
-<input 
-    type="text"
-    class="form-control"
-    [(ngModel)]="serverName">
-    
-<button 
-class="btn btn-primary" 
-[disabled]="!allowNewServer" 
-(click)="onCreateServer()">Add Server</button>
-<p>{{serverCreationStatus}}</p>
+<input type="text" class="form-control" [(ngModel)]="serverName">
+
+<button class="btn btn-primary" [disabled]="!allowNewServer" (click)="onCreateServer()">Add Server</button>
+<!--<p>{{serverCreationStatus}}</p> -->
+<p *ngIf="serverCreated">Server was created, server name is {{serverName}}</p>
 <app-server></app-server>
 <app-server></app-server>
